--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </div>
   </div>
     <div class="footer-bottom">
-      &copy; Designed by Neevesha Odhur
+      &copy; Designed by Neevesha
       </div>
      </div>
    </footer>
